--- a/DoneProject/ofxiphone-Info.plist
+++ b/DoneProject/ofxiphone-Info.plist
@@ -32,5 +32,7 @@
 	<true/>
 	<key>UIInterfaceOrientation</key>
 	<string>UIInterfaceOrientationPortrait</string>
+	<key>UIFileSharingEnabled</key>
+	<string>YES</string>
 </dict>
 </plist>
