--- a/DoneProject/ofxiphone-Info.plist
+++ b/DoneProject/ofxiphone-Info.plist
@@ -13,7 +13,7 @@
 	<key>CFBundleDevelopmentRegion</key>
 	<string>English</string>
 	<key>CFBundleDisplayName</key>
-	<string>Epic</string>
+	<string>Listening</string>
 	<key>CFBundleExecutable</key>
 	<string>${EXECUTABLE_NAME}</string>
 	<key>CFBundleIconFile</key>
